改安裝 Mediator，並使用 globalUsing 處理 using 問題

--- a/src/dotnet.WebApi.Service/dotnet.WebApi.Service.csproj
+++ b/src/dotnet.WebApi.Service/dotnet.WebApi.Service.csproj
@@ -7,16 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="11.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\dotnet.WebApi.Common\dotnet.WebApi.Common.csproj" />
     <ProjectReference Include="..\dotnet.WebApi.Repository\dotnet.WebApi.Repository.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Mediator.Abstractions" Version="2.0.30" />
   </ItemGroup>
 
 </Project>
