--- a/src/dotnet.WebApi.Repository/dotnet.WebApi.Repository.csproj
+++ b/src/dotnet.WebApi.Repository/dotnet.WebApi.Repository.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\dotnet.WebApi.AopComponent\dotnet.WebApi.AopComponent.csproj" />
     <ProjectReference Include="..\dotnet.WebApi.Repository.Db.SampleDb\dotnet.WebApi.Repository.Db.SampleDb.csproj" />
   </ItemGroup>
 
