--- a/src/dotnet.WebApi/appsettings.json
+++ b/src/dotnet.WebApi/appsettings.json
@@ -1,8 +1,7 @@
 {
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.Grafana.Loki"
+      "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
       "Default": "Information",
@@ -15,15 +14,6 @@
       }
     },
     "writeTo": [
-      {
-        "Name": "GrafanaLoki",
-        "Args": {
-          "uri": "http://loki-localhost-server-url",
-          "propertiesAsLabels": [
-            "ApplicationName"
-          ]
-        }
-      },
       {
         "Name": "Console",
         "Args": {
