--- a/src/dotnet.WebApi/Dockerfile-bullseye-slim
+++ b/src/dotnet.WebApi/Dockerfile-bullseye-slim
@@ -13,10 +13,11 @@ ARG BuildConfiguration=Debug
 WORKDIR /src
 COPY ["nuget.config", "."]
 COPY ["dotnet.WebApi/dotnet.WebApi.csproj", "dotnet.WebApi/"]
-COPY ["dotnet.WebApi.Service/dotnet.WebApi.Service.csproj", "dotnet.WebApi.Service/"]
+COPY ["dotnet.WebApi.AopComponent/dotnet.WebApi.AopComponent.csproj", "dotnet.WebApi.AopComponent/"]
 COPY ["dotnet.WebApi.Common/dotnet.WebApi.Common.csproj", "dotnet.WebApi.Common/"]
 COPY ["dotnet.WebApi.Repository/dotnet.WebApi.Repository.csproj", "dotnet.WebApi.Repository/"]
 COPY ["dotnet.WebApi.Repository.Db.SampleDb/dotnet.WebApi.Repository.Db.SampleDb.csproj", "dotnet.WebApi.Repository.Db.SampleDb/"]
+COPY ["dotnet.WebApi.Service/dotnet.WebApi.Service.csproj", "dotnet.WebApi.Service/"]
 RUN dotnet restore "dotnet.WebApi/dotnet.WebApi.csproj"
 #RUN dotnet restore "dotnet.WebApi/dotnet.WebApi.csproj" -s https://privage-package.mydomain.org/nuget/Default/
 COPY . .
