--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,9 @@ on:
   #   branches: [ "main" ]
   push:
     branches: [ "main" ]
+    paths:
+      - '**.cs'
+      - '!src/deploy/**'
   pull_request:
     branches: [ "main" ]
 
