因為沒有裝 ArgoRollout，所以關閉金絲雀

--- a/deploy/helm-chart/dotnet-webapi/values.yaml
+++ b/deploy/helm-chart/dotnet-webapi/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 
 # Use Canary - Should be install ArgoRollout
-useCanary: true
+useCanary: false
 
 # The overall system your service is a part of
 # This Value is used by Label: app.kubernetes.io/part-of
