--- a/deploy/helm-chart/dotnet-webapi/templates/gateway.yaml
+++ b/deploy/helm-chart/dotnet-webapi/templates/gateway.yaml
@@ -7,7 +7,8 @@ spec:
     istio: {{ .Values.istioIngressGateway | default "ingressgateway" }} # use istio default controller
   servers:
   - port:
-      number: 8080
+#      number: 8080
+      number: 80
       name: http
       protocol: HTTP
     hosts:
