--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - '**.cs'
+      - 'src/**'
       - '!src/deploy/**'
   pull_request:
     branches: [ "main" ]
