--- a/src/dotnet.WebApi/appsettings.json
+++ b/src/dotnet.WebApi/appsettings.json
@@ -1,32 +1,15 @@
 {
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console"
-    ],
-    "MinimumLevel": {
+  "Logging": {
+    "LogLevel": {
       "Default": "Information",
-      "Override": {
-        "System": "Warning",
-        "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.Hosting.Lifetime": "Warning",
-        "Microsoft.EntityFrameworkCore": "Warning"
-      }
-    },
-    "writeTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss zzz} [{Level:u3}] {Message}{NewLine}{Exception}"
-        }
-      }
-    ]
+      "Microsoft": "Warning"
+    }
   },
   "AllowedHosts": "*",
   "Auth": {
-    "ClientId": "sample_code",
+    "ClientId": "lab_client",
     "ClientSecret": "--------------------------------",
     "Authority": "https://opid-t.mydomain.org",
-    "Audience": "sample_resource_api"
+    "Audience": "lab_api"
   }
 }
