--- a/deploy/helm-chart/dotnet-webapi/templates/configmap-otel-env.yaml
+++ b/deploy/helm-chart/dotnet-webapi/templates/configmap-otel-env.yaml
@@ -9,7 +9,8 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
   namespace: {{ .Release.Namespace | quote }}
 data:
-  CORECLR_ENABLE_PROFILING: "1"
+  ASPNETCORE_HOSTINGSTARTUPASSEMBLIES: "OpenTelemetry.AutoInstrumentation.AspNetCoreBootstrapper"
+  CORECLR_ENABLE_PROFILING: {{ .Values.openTelemetry.enableCLRProfiler | default "1"  | quote }}
   CORECLR_PROFILER: '{918728DD-259F-4A6A-AC2B-B85E1B658318}'
   CORECLR_PROFILER_PATH: "/otel-dotnet-auto/OpenTelemetry.AutoInstrumentation.Native.so"
   DOTNET_ADDITIONAL_DEPS: "/otel-dotnet-auto/AdditionalDeps"
@@ -18,9 +19,14 @@ data:
   OTEL_DOTNET_AUTO_HOME: "/otel-dotnet-auto"
   OTEL_DOTNET_AUTO_INTEGRATIONS_FILE: "/otel-dotnet-auto/integrations.json"
   OTEL_SERVICE_NAME: {{ .Values.service | lower | quote }}
-  OTEL_RESOURCE_ATTRIBUTES: "service.version={{ .Values.image.repository }}:{{ .Values.image.tag }}, service.namespace={{ .Release.Namespace }}"
-  OTEL_EXPORTER_OTLP_ENDPOINT: {{ .Values.openTelemetry.otlpEndpoint | default "http://otel-collector.otel.svc.cluster.local:4317" }}
+  OTEL_RESOURCE_ATTRIBUTES: "service.version={{ .Values.image.repository }}:{{ .Values.image.tag }}, service.namespace={{ .Release.Namespace }}, deployment.environment={{ .Values.env.ASPNETCORE_ENVIRONMENT }}"
+  OTEL_EXPORTER_OTLP_ENDPOINT: {{ .Values.openTelemetry.otlpEndpoint | default "http://otel-collector.kube-monitor.svc.cluster.local:4317" }}
   OTEL_EXPORTER_OTLP_PROTOCOL: {{ .Values.openTelemetry.otlpProtocol | default "grpc" }}
+  OTEL_DOTNET_AUTO_LOGS_ENABLED: {{ .Values.openTelemetry.autoLogs | default "false" | quote }}
+  OTEL_DOTNET_AUTO_LOGS_INCLUDE_FORMATTED_MESSAGE: {{ .Values.openTelemetry.autoLogsIncludeFormatted | default "true" | quote }}
   OTEL_DOTNET_AUTO_TRACES_ADDITIONAL_SOURCES: {{ .Values.service | lower | quote }}
   OTEL_DOTNET_AUTO_METRICS_ADDITIONAL_SOURCES: {{ .Values.service | lower | quote }}
+  Logging__OpenTelemetry__IncludeScopes: "true"
+  Logging__Console__FormatterName: "Simple"
+  Logging__Console__FormatterOptions__SingleLine: "true"
 {{- end }}
