--- a/src/dotnet.WebApi.Repository/dotnet.WebApi.Repository.csproj
+++ b/src/dotnet.WebApi.Repository/dotnet.WebApi.Repository.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\dotnet.WebApi.AopComponent\dotnet.WebApi.AopComponent.csproj" />
-    <ProjectReference Include="..\dotnet.WebApi.Repository.Db.SampleDb\dotnet.WebApi.Repository.Db.SampleDb.csproj" />
+    <ProjectReference Include="..\dotnet.WebApi.Observability\dotnet.WebApi.Observability.csproj" />
+    <ProjectReference Include="..\dotnet.WebApi.Database.SampleDb\dotnet.WebApi.Database.SampleDb.csproj" />
   </ItemGroup>
 
 </Project>
