--- a/src/dotnet.WebApi/appsettings.json
+++ b/src/dotnet.WebApi/appsettings.json
@@ -14,7 +14,7 @@
   "Auth": {
     "ClientId": "lab_client",
     "ClientSecret": "--------------------------------",
-    "Authority": "https://opid-t.mydomain.org",
+    "Authority": "https://opid-t.local.vm",
     "Audience": "lab_api"
   }
 }
