--- a/src/dotnetLab.Application/dotnetLab.Application.csproj
+++ b/src/dotnetLab.Application/dotnetLab.Application.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\dotnetLab.Common\dotnetLab.Common.csproj" />
     <ProjectReference Include="..\dotnetLab.Observability\dotnetLab.Observability.csproj" />
-    <ProjectReference Include="..\dotnetLab.DomainEntities\dotnetLab.DomainEntities.csproj" />
+    <ProjectReference Include="..\dotnetLab.Domain\dotnetLab.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
