調整專案名稱 (還是 use case & domain entity 比較對味)

--- a/src/dotnetLab.GrpcService/dotnetLab.GrpcService.csproj
+++ b/src/dotnetLab.GrpcService/dotnetLab.GrpcService.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\dotnetLab.Application\dotnetLab.Application.csproj" />
+      <ProjectReference Include="..\dotnetLab.UseCase\dotnetLab.UseCase.csproj" />
       <ProjectReference Include="..\dotnetLab.Repository\dotnetLab.Repository.csproj" />
     </ItemGroup>
 
