--- a/src/dotnetLab.DomainEntity/dotnetLab.DomainEntity.csproj
+++ b/src/dotnetLab.DomainEntity/dotnetLab.DomainEntity.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
+    </ItemGroup>
+
 </Project>
