把 common 專案更改為 auth 專用的專案，後面與 author 相關的功能將抽到這邊

--- a/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
+++ b/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\dotnetLab.Common\dotnetLab.Common.csproj" />
+    <ProjectReference Include="..\dotnetLab.Authorize\dotnetLab.Authorize.csproj" />
     <ProjectReference Include="..\dotnetLab.Database.SampleDb\dotnetLab.Database.SampleDb.csproj" />
     <ProjectReference Include="..\dotnetLab.Repository\dotnetLab.Repository.csproj" />
     <ProjectReference Include="..\dotnetLab.UseCase\dotnetLab.UseCase.csproj" />
