調整 auth 相關設定，並串接測試用的 keyclock

--- a/src/dotnetLab.WebApi/appsettings.json
+++ b/src/dotnetLab.WebApi/appsettings.json
@@ -12,9 +12,11 @@
   },
   "AllowedHosts": "*",
   "Auth": {
-    "ClientId": "lab_client",
-    "ClientSecret": "--------------------------------",
-    "Authority": "https://opid-t.local.vm",
+    "Issuer": "http://localhost:8080/realms/master",
+    "AuthorizationEndpoint":"http://localhost:8080/realms/master/protocol/openid-connect/auth",
+    "TokenEndpoint":"http://localhost:8080/realms/master/protocol/openid-connect/token",
+    "ClientId": "test_client",
+    "ClientSecret": "6ZyOGaalxmk0NIZCg9w81lIU9bxnDL4P",
     "Audience": "lab_api"
   }
 }
