增加 api permission validator 中的 logging & keyclock 中的設定資訊

--- a/src/dotnetLab.WebApi/appsettings.Development.json
+++ b/src/dotnetLab.WebApi/appsettings.Development.json
@@ -1,2 +1,13 @@
 ﻿{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information",
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
+    }
+  }
 }
