--- a/src/dotnetLab.WebApi/appsettings.json
+++ b/src/dotnetLab.WebApi/appsettings.json
@@ -12,7 +12,7 @@
   },
   "AllowedHosts": "*",
   "Auth": {
-    "Issuer": "http://localhost:8080/realms/master",
+    "Authority": "http://localhost:8080/realms/master",
     "AuthorizationEndpoint":"http://localhost:8080/realms/master/protocol/openid-connect/auth",
     "TokenEndpoint":"http://localhost:8080/realms/master/protocol/openid-connect/token",
     "ClientId": "test_client",
