Replace Mediator with Wolverine for message handling
Refactored codebase to transition from Mediator to Wolverine for command handling, query processing, and event publication. Updated dependency injections, interfaces, and handlers to align with Wolverine's conventions. Removed Mediator-related packages and configuration, replacing them with Wolverine equivalents for improved performance and flexibility.

--- a/src/dotnetLab.UseCase/dotnetLab.UseCase.csproj
+++ b/src/dotnetLab.UseCase/dotnetLab.UseCase.csproj
@@ -12,11 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
-    <PackageReference Include="Mediator.SourceGenerator" Version="2.1.7">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="WolverineFx" Version="3.13.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
   </ItemGroup>
 
