refactor: project rename

--- a/src/dotnetLab.GrpcService/dotnetLab.GrpcService.csproj
+++ b/src/dotnetLab.GrpcService/dotnetLab.GrpcService.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\dotnetLab.UseCase\dotnetLab.UseCase.csproj" />
+    <ProjectReference Include="..\dotnetLab.UseCases\dotnetLab.UseCases.csproj" />
     <ProjectReference Include="..\dotnetLab.Repository\dotnetLab.Repository.csproj" />
   </ItemGroup>
 
