--- a/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
+++ b/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
@@ -25,6 +25,6 @@
   <ItemGroup>
     <ProjectReference Include="..\dotnetLab.Database.SampleDb\dotnetLab.Database.SampleDb.csproj" />
     <ProjectReference Include="..\dotnetLab.Repository\dotnetLab.Repository.csproj" />
-    <ProjectReference Include="..\dotnetLab.UseCase\dotnetLab.UseCase.csproj" />
+    <ProjectReference Include="..\dotnetLab.UseCases\dotnetLab.UseCases.csproj" />
   </ItemGroup>
 </Project>
