--- a/src/dotnetLab.Infrastructure/dotnetLab.Infrastructure.csproj
+++ b/src/dotnetLab.Infrastructure/dotnetLab.Infrastructure.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\dotnetLab.Infrastructure\dotnetLab.Infrastructure.csproj" />
+      <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.11.0" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
     </ItemGroup>
 
 </Project>
