--- a/src/dotnetLab.GrpcService/Dockerfile
+++ b/src/dotnetLab.GrpcService/Dockerfile
@@ -14,13 +14,14 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0-bookworm-slim AS build
 WORKDIR /src
 COPY ["nuget.config", "."]
+COPY ["dotnetLab.Infrastructure/dotnetLab.Infrastructure.csproj", "dotnetLab.Infrastructure/"]
 COPY ["dotnetLab.Observability/dotnetLab.Observability.csproj", "dotnetLab.Observability/"]
 
 COPY ["dotnetLab.Database.SampleDb/dotnetLab.Database.SampleDb.csproj", "dotnetLab.Database.SampleDb/"]
 COPY ["dotnetLab.Repository/dotnetLab.Repository.csproj", "dotnetLab.Repository/"]
 
-COPY ["dotnetLab.UseCase/dotnetLab.UseCase.csproj", "dotnetLab.UseCase/"]
-COPY ["dotnetLab.DomainEntity/dotnetLab.DomainEntity.csproj", "dotnetLab.DomainEntity/"]
+COPY ["dotnetLab.UseCases/dotnetLab.UseCases.csproj", "dotnetLab.UseCase/"]
+COPY ["dotnetLab.Domains/dotnetLab.Domains.csproj", "dotnetLab.DomainEntity/"]
 
 COPY ["dotnetLab.GrpcService/dotnetLab.GrpcService.csproj", "dotnetLab.GrpcService/"]
 
