Refactor: Migrate Infrastructure namespace to SharedKernel
為符合 CA / Hexagonal 的名詞定義，調整命名空間結構，統整 Infrastructure 至 SharedKernel：
- 重命名 `dotnetLab.Infrastructure` 資料夾與專案為 `dotnetLab.SharedKernel`
- 更新所有相關檔案的命名空間與參考路徑
- 修正專案引用與 Dockerfile 中的路徑配置

--- a/src/dotnetLab.GrpcService/Dockerfile
+++ b/src/dotnetLab.GrpcService/Dockerfile
@@ -14,7 +14,7 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0-bookworm-slim AS build
 WORKDIR /src
 COPY ["nuget.config", "."]
-COPY ["dotnetLab.Infrastructure/dotnetLab.Infrastructure.csproj", "dotnetLab.Infrastructure/"]
+COPY ["dotnetLab.SharedKernel/dotnetLab.SharedKernel.csproj", "dotnetLab.SharedKernel/"]
 COPY ["dotnetLab.Observability/dotnetLab.Observability.csproj", "dotnetLab.Observability/"]
 
 COPY ["dotnetLab.Database.SampleDb/dotnetLab.Database.SampleDb.csproj", "dotnetLab.Database.SampleDb/"]
